--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "reactup",
+  "name": "jessup",
   "version": "1.0.0",
-  "main": "reactup.js",
+  "main": "jessup.js",
   "author": "Josh Justice <me@codingitwrong.com>",
   "license": "MIT",
   "devDependencies": {
@@ -13,7 +13,7 @@
     "prettier": "^2.6.2"
   },
   "scripts": {
-    "start": "node reactup.js",
+    "start": "node jessup.js",
     "test": "jest --watchAll",
     "lint": "eslint ."
   },
