--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-jest": "^26.1.5",
     "eslint-plugin-prettier": "^4.0.0",
-    "jest": "^28.1.0"
+    "jest": "^28.1.0",
+    "prettier": "^2.6.2"
   },
   "scripts": {
     "start": "node kernel.js",
@@ -19,7 +20,6 @@
   },
   "dependencies": {
     "inquirer": "^8.2.4",
-    "node-jq": "^2.3.3",
-    "prettier": "^2.6.2"
+    "node-jq": "^2.3.3"
   }
 }
