--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "dedent": "^0.7.0",
     "inquirer": "^8.2.4",
     "node-jq": "^2.3.3"
   }
